Fist cut at pinning (not fully workking yet)
